--- a/index.html
+++ b/index.html
@@ -9,22 +9,32 @@
     <link rel="stylesheet" href="assets/css/style.css" > 
 </head>
 <body>
+   <navbar>
     <h1>Isabel Ammann</h1>
-    <a id="about" href="#">About</a>
-    <a id="portfolio" href="#">Portfolio</a>
-    <a id="contact" href="#">Contact</a>
-  
+    <a id="contact" href="contact.html">Contact</a>
+    <a id="portfolio" href="portfolio.html">Portfolio</a>
+    <a id="about" href="index.html">About</a>
+   </navbar>  
+  <br>
+  <br>
+  <br>
+  <div class="wrapper"  style="background-image:url(assets/images/vintage-concrete.png)">
     <section class="sec">
     <h2>About Me</h2>
     <div id="Picture"> 
         <img src="assets/images/IMG_7950.jpg" height="200" width="300" BORDER="0">
     </div>
     <div class="Bio">
-        My name is Isabel. Since I was a little girl I was obsessed with sports. My favorite sport since I could remember was basketball. Nothing made me more happy than going outside and throwing a ball at the hoop and learning new tricks. Since then I've lost some of the moves I've learned throughout the years, but I still love basketball and all sports really. The top three sports I loved to play were soccer, volleyball, and basketball. Whenever I'd play volleyball my grandmother would make fun at how much I threw myself for the ball. In all honesty, that was one of my most favorite part of volleyball. Going in for a save and being able to continue a play when it seemed it was almost difficult if not impossible to happen. I saved a play only once, but it was one of the most exciting feelings I'd ever experienced. 
+        Hi my name is Isabel. Since I was a little girl I was obsessed with sports. Basketball was always my favorite sport. Nothing made me more happy than going outside and playing hoops. I would watch basketball movies all the time. Since then I've lost some of the moves I've learned throughout the years, but I still love basketball and all sports really. My top three favorite sports  were soccer, volleyball, and basketball. Whenever I'd play volleyball my grandmother would make fun at how much I threw myself for the ball. In all honesty, that was my favorite part of volleyball. Going in for a save and being able to continue a play when it seemed it was impossible to save always gave me a rush. I saved a play only once, but it was one of the best feelings I'd ever experienced. 
+    </div>
     <div class="Bio1">
-        Speaking on another subject, I love dogs. I especially love my two dogs Oliver and Mia. They can be a a handful sometimes but they are more hilarious than difficult to deal with. 
-    </div></section> 
-
-    <footer>Copyright ©</footer>
+        Speaking on another subject, I love dogs. I especially love my two dogs Oliver and Mia. They can be a a handful sometimes but they are way more hilarious than difficult to deal with. 
+    </div>
+    </section> 
+   </div>
+<br>
+<br>
+    
+<footer>Copyright ©</footer>
 </body>
 </html>
